# Flite-TTS-Engine-for-Android

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/edu/cmu/cs/speech/tts/flite/: NativeFliteTTS.java
app/src/main/jni/: edu_cmu_cs_speech_tts_flite_engine.cc
